infrastructure/cdk.out/Hallucifix-Network-dev.template.json
{
 "Description": "HalluciFix Network Infrastructure - dev",
 "Resources": {
  "HallucifixVpc9EFE5A70": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/Resource"
   }
  },
  "HallucifixVpcPublicSubnet1SubnetE20BB1D2": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet1/Subnet"
   }
  },
  "HallucifixVpcPublicSubnet1RouteTable2CCE9D89": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet1/RouteTable"
   }
  },
  "HallucifixVpcPublicSubnet1RouteTableAssociation18DC98D0": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HallucifixVpcPublicSubnet1RouteTable2CCE9D89"
    },
    "SubnetId": {
     "Ref": "HallucifixVpcPublicSubnet1SubnetE20BB1D2"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "HallucifixVpcPublicSubnet1DefaultRoute50A6D937": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "HallucifixVpcIGWC2FF4F11"
    },
    "RouteTableId": {
     "Ref": "HallucifixVpcPublicSubnet1RouteTable2CCE9D89"
    }
   },
   "DependsOn": [
    "HallucifixVpcVPCGW0F6D83B5"
   ],
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "HallucifixVpcPublicSubnet1EIP8FEC7948": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet1/EIP"
   }
  },
  "HallucifixVpcPublicSubnet1NATGateway1542BB71": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "HallucifixVpcPublicSubnet1EIP8FEC7948",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "HallucifixVpcPublicSubnet1SubnetE20BB1D2"
    },
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet1"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ]
   },
   "DependsOn": [
    "HallucifixVpcPublicSubnet1DefaultRoute50A6D937",
    "HallucifixVpcPublicSubnet1RouteTableAssociation18DC98D0"
   ],
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet1/NATGateway"
   }
  },
  "HallucifixVpcPublicSubnet2Subnet2450EC55": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet2/Subnet"
   }
  },
  "HallucifixVpcPublicSubnet2RouteTable59285B18": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet2/RouteTable"
   }
  },
  "HallucifixVpcPublicSubnet2RouteTableAssociation5BDC8144": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HallucifixVpcPublicSubnet2RouteTable59285B18"
    },
    "SubnetId": {
     "Ref": "HallucifixVpcPublicSubnet2Subnet2450EC55"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "HallucifixVpcPublicSubnet2DefaultRoute85319EF2": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "HallucifixVpcIGWC2FF4F11"
    },
    "RouteTableId": {
     "Ref": "HallucifixVpcPublicSubnet2RouteTable59285B18"
    }
   },
   "DependsOn": [
    "HallucifixVpcVPCGW0F6D83B5"
   ],
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "HallucifixVpcPublicSubnet2EIP04E5DFF4": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet2/EIP"
   }
  },
  "HallucifixVpcPublicSubnet2NATGateway5FC15DB0": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "HallucifixVpcPublicSubnet2EIP04E5DFF4",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "HallucifixVpcPublicSubnet2Subnet2450EC55"
    },
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet2"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ]
   },
   "DependsOn": [
    "HallucifixVpcPublicSubnet2DefaultRoute85319EF2",
    "HallucifixVpcPublicSubnet2RouteTableAssociation5BDC8144"
   ],
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet2/NATGateway"
   }
  },
  "HallucifixVpcPublicSubnet3Subnet9861B465": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet3"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet3/Subnet"
   }
  },
  "HallucifixVpcPublicSubnet3RouteTable9221AA73": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet3"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet3/RouteTable"
   }
  },
  "HallucifixVpcPublicSubnet3RouteTableAssociation4907A1AD": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HallucifixVpcPublicSubnet3RouteTable9221AA73"
    },
    "SubnetId": {
     "Ref": "HallucifixVpcPublicSubnet3Subnet9861B465"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet3/RouteTableAssociation"
   }
  },
  "HallucifixVpcPublicSubnet3DefaultRouteEA1CBBD9": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "HallucifixVpcIGWC2FF4F11"
    },
    "RouteTableId": {
     "Ref": "HallucifixVpcPublicSubnet3RouteTable9221AA73"
    }
   },
   "DependsOn": [
    "HallucifixVpcVPCGW0F6D83B5"
   ],
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PublicSubnet3/DefaultRoute"
   }
  },
  "HallucifixVpcPrivateSubnet1SubnetFFEEFD67": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet1/Subnet"
   }
  },
  "HallucifixVpcPrivateSubnet1RouteTable7C3E6C74": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet1"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet1/RouteTable"
   }
  },
  "HallucifixVpcPrivateSubnet1RouteTableAssociation1098A2E5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HallucifixVpcPrivateSubnet1RouteTable7C3E6C74"
    },
    "SubnetId": {
     "Ref": "HallucifixVpcPrivateSubnet1SubnetFFEEFD67"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "HallucifixVpcPrivateSubnet1DefaultRoute0E9E02FF": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "HallucifixVpcPublicSubnet1NATGateway1542BB71"
    },
    "RouteTableId": {
     "Ref": "HallucifixVpcPrivateSubnet1RouteTable7C3E6C74"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "HallucifixVpcPrivateSubnet2Subnet08A6F5AB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.4.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet2/Subnet"
   }
  },
  "HallucifixVpcPrivateSubnet2RouteTableF9588C1F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet2"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet2/RouteTable"
   }
  },
  "HallucifixVpcPrivateSubnet2RouteTableAssociation70386362": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HallucifixVpcPrivateSubnet2RouteTableF9588C1F"
    },
    "SubnetId": {
     "Ref": "HallucifixVpcPrivateSubnet2Subnet08A6F5AB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "HallucifixVpcPrivateSubnet2DefaultRoute139232E7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "HallucifixVpcPublicSubnet2NATGateway5FC15DB0"
    },
    "RouteTableId": {
     "Ref": "HallucifixVpcPrivateSubnet2RouteTableF9588C1F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "HallucifixVpcPrivateSubnet3SubnetB14BABA5": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.5.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet3"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet3/Subnet"
   }
  },
  "HallucifixVpcPrivateSubnet3RouteTableC3474C77": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet3"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet3/RouteTable"
   }
  },
  "HallucifixVpcPrivateSubnet3RouteTableAssociation7B79935A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HallucifixVpcPrivateSubnet3RouteTableC3474C77"
    },
    "SubnetId": {
     "Ref": "HallucifixVpcPrivateSubnet3SubnetB14BABA5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "HallucifixVpcPrivateSubnet3DefaultRoute3E9F3BC4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "HallucifixVpcPublicSubnet1NATGateway1542BB71"
    },
    "RouteTableId": {
     "Ref": "HallucifixVpcPrivateSubnet3RouteTableC3474C77"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/PrivateSubnet3/DefaultRoute"
   }
  },
  "HallucifixVpcDatabaseSubnet1Subnet9217D263": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.6.0/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Database"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/DatabaseSubnet1"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/DatabaseSubnet1/Subnet"
   }
  },
  "HallucifixVpcDatabaseSubnet1RouteTableB632936A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/DatabaseSubnet1"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/DatabaseSubnet1/RouteTable"
   }
  },
  "HallucifixVpcDatabaseSubnet1RouteTableAssociation89D45F52": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HallucifixVpcDatabaseSubnet1RouteTableB632936A"
    },
    "SubnetId": {
     "Ref": "HallucifixVpcDatabaseSubnet1Subnet9217D263"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/DatabaseSubnet1/RouteTableAssociation"
   }
  },
  "HallucifixVpcDatabaseSubnet2SubnetA29A3901": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.6.16/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Database"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/DatabaseSubnet2"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/DatabaseSubnet2/Subnet"
   }
  },
  "HallucifixVpcDatabaseSubnet2RouteTable299A168E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/DatabaseSubnet2"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/DatabaseSubnet2/RouteTable"
   }
  },
  "HallucifixVpcDatabaseSubnet2RouteTableAssociation95EA676B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HallucifixVpcDatabaseSubnet2RouteTable299A168E"
    },
    "SubnetId": {
     "Ref": "HallucifixVpcDatabaseSubnet2SubnetA29A3901"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/DatabaseSubnet2/RouteTableAssociation"
   }
  },
  "HallucifixVpcDatabaseSubnet3SubnetCF4717AD": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.6.32/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Database"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Isolated"
     },
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/DatabaseSubnet3"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/DatabaseSubnet3/Subnet"
   }
  },
  "HallucifixVpcDatabaseSubnet3RouteTableFD8A0986": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc/DatabaseSubnet3"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/DatabaseSubnet3/RouteTable"
   }
  },
  "HallucifixVpcDatabaseSubnet3RouteTableAssociation22E3A6FC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HallucifixVpcDatabaseSubnet3RouteTableFD8A0986"
    },
    "SubnetId": {
     "Ref": "HallucifixVpcDatabaseSubnet3SubnetCF4717AD"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/DatabaseSubnet3/RouteTableAssociation"
   }
  },
  "HallucifixVpcIGWC2FF4F11": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/IGW"
   }
  },
  "HallucifixVpcVPCGW0F6D83B5": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "HallucifixVpcIGWC2FF4F11"
    },
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/VPCGW"
   }
  },
  "HallucifixVpcRestrictDefaultSecurityGroupCustomResourceF8B3D11D": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "HallucifixVpc9EFE5A70",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "135167710042"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "HallucifixVpcS3EndpointF01F3803": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "HallucifixVpcPrivateSubnet1RouteTable7C3E6C74"
     },
     {
      "Ref": "HallucifixVpcPrivateSubnet2RouteTableF9588C1F"
     },
     {
      "Ref": "HallucifixVpcPrivateSubnet3RouteTableC3474C77"
     },
     {
      "Ref": "HallucifixVpcPublicSubnet1RouteTable2CCE9D89"
     },
     {
      "Ref": "HallucifixVpcPublicSubnet2RouteTable59285B18"
     },
     {
      "Ref": "HallucifixVpcPublicSubnet3RouteTable9221AA73"
     },
     {
      "Ref": "HallucifixVpcDatabaseSubnet1RouteTableB632936A"
     },
     {
      "Ref": "HallucifixVpcDatabaseSubnet2RouteTable299A168E"
     },
     {
      "Ref": "HallucifixVpcDatabaseSubnet3RouteTableFD8A0986"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".s3"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/S3Endpoint/Resource"
   }
  },
  "HallucifixVpcDynamoDBEndpoint18106A79": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "RouteTableIds": [
     {
      "Ref": "HallucifixVpcPrivateSubnet1RouteTable7C3E6C74"
     },
     {
      "Ref": "HallucifixVpcPrivateSubnet2RouteTableF9588C1F"
     },
     {
      "Ref": "HallucifixVpcPrivateSubnet3RouteTableC3474C77"
     },
     {
      "Ref": "HallucifixVpcPublicSubnet1RouteTable2CCE9D89"
     },
     {
      "Ref": "HallucifixVpcPublicSubnet2RouteTable59285B18"
     },
     {
      "Ref": "HallucifixVpcPublicSubnet3RouteTable9221AA73"
     },
     {
      "Ref": "HallucifixVpcDatabaseSubnet1RouteTableB632936A"
     },
     {
      "Ref": "HallucifixVpcDatabaseSubnet2RouteTable299A168E"
     },
     {
      "Ref": "HallucifixVpcDatabaseSubnet3RouteTableFD8A0986"
     }
    ],
    "ServiceName": {
     "Fn::Join": [
      "",
      [
       "com.amazonaws.",
       {
        "Ref": "AWS::Region"
       },
       ".dynamodb"
      ]
     ]
    },
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Name",
      "Value": "Hallucifix-Network-dev/HallucifixVpc"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcEndpointType": "Gateway",
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/HallucifixVpc/DynamoDBEndpoint/Resource"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:135167710042:security-group/",
             {
              "Fn::GetAtt": [
               "HallucifixVpc9EFE5A70",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-135167710042-us-east-1",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs22.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "LambdaSecurityGroup0BD9FC99": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for HalluciFix Lambda functions",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/LambdaSecurityGroup/Resource"
   }
  },
  "DatabaseSecurityGroup7319C0F6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for HalluciFix RDS database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/DatabaseSecurityGroup/Resource"
   }
  },
  "DatabaseSecurityGroupfromHallucifixNetworkdevLambdaSecurityGroup8DE4F5945432AB746AFE": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow Lambda functions to connect to PostgreSQL",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "DatabaseSecurityGroup7319C0F6",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "LambdaSecurityGroup0BD9FC99",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/DatabaseSecurityGroup/from HallucifixNetworkdevLambdaSecurityGroup8DE4F594:5432"
   }
  },
  "CacheSecurityGroupC6A3ACCF": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for HalluciFix ElastiCache Redis",
    "SecurityGroupEgress": [
     {
      "CidrIp": "255.255.255.255/32",
      "Description": "Disallow all traffic",
      "FromPort": 252,
      "IpProtocol": "icmp",
      "ToPort": 86
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/CacheSecurityGroup/Resource"
   }
  },
  "CacheSecurityGroupfromHallucifixNetworkdevLambdaSecurityGroup8DE4F5946379A362F184": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow Lambda functions to connect to Redis",
    "FromPort": 6379,
    "GroupId": {
     "Fn::GetAtt": [
      "CacheSecurityGroupC6A3ACCF",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "LambdaSecurityGroup0BD9FC99",
      "GroupId"
     ]
    },
    "ToPort": 6379
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/CacheSecurityGroup/from HallucifixNetworkdevLambdaSecurityGroup8DE4F594:6379"
   }
  },
  "SecretsManagerEndpointSecurityGroupEA7D8B27": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Hallucifix-Network-dev/SecretsManagerEndpoint/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": {
       "Fn::GetAtt": [
        "HallucifixVpc9EFE5A70",
        "CidrBlock"
       ]
      },
      "Description": {
       "Fn::Join": [
        "",
        [
         "from ",
         {
          "Fn::GetAtt": [
           "HallucifixVpc9EFE5A70",
           "CidrBlock"
          ]
         },
         ":443"
        ]
       ]
      },
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/SecretsManagerEndpoint/SecurityGroup/Resource"
   }
  },
  "SecretsManagerEndpoint5E83C66B": {
   "Type": "AWS::EC2::VPCEndpoint",
   "Properties": {
    "PrivateDnsEnabled": true,
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "SecretsManagerEndpointSecurityGroupEA7D8B27",
       "GroupId"
      ]
     }
    ],
    "ServiceName": "com.amazonaws.us-east-1.secretsmanager",
    "SubnetIds": [
     {
      "Ref": "HallucifixVpcPrivateSubnet1SubnetFFEEFD67"
     },
     {
      "Ref": "HallucifixVpcPrivateSubnet2Subnet08A6F5AB"
     },
     {
      "Ref": "HallucifixVpcPrivateSubnet3SubnetB14BABA5"
     }
    ],
    "Tags": [
     {
      "Key": "Environment",
      "Value": "dev"
     },
     {
      "Key": "ManagedBy",
      "Value": "CDK"
     },
     {
      "Key": "Project",
      "Value": "HalluciFix"
     }
    ],
    "VpcEndpointType": "Interface",
    "VpcId": {
     "Ref": "HallucifixVpc9EFE5A70"
    }
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/SecretsManagerEndpoint/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/+1XXW/aMBT9LfVj5WYMbX3gjdKqirQNBFUfhtBk7At1a649f4SxKP99cuLA6CqNaZuUhz7Zubkfxyd2fG4/6799n/XO2NZdcPF0oeQyK2ee8SfKtu4L8H5W3hs+L8mGfRt+d2RAzgklyPwt87Blu9biwhLBjzSu5DpY5qVGMpiXhEthPzL3tA/cwFHE3c5EwyQsleSkoqdHWFkwD38SkjutmAdBqkW1oKMV3k9GtKk8q/3mJWEFk4otpZJ+91ljm6cwPBdpHqtdKc3bchtmmiS5GeMHFpA/kIG3ASiRprgcPXNnzsk15qa4HAphwbkxjiwkxsh5vaBOoKiBCPFp/63JYE7OyaIzALuB4pWm02iqT1xzzuJsqoOHO7ZUcLAfbEPnNJd1gr1znNzkkzgcyKbpP/DPD/CKKdcBzv8ORneQdARGd5B0BEZ3kLzCeIXRaRj1BZajB [...]
   },
   "Metadata": {
    "aws:cdk:path": "Hallucifix-Network-dev/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "VpcId": {
   "Description": "VPC ID",
   "Value": {
    "Ref": "HallucifixVpc9EFE5A70"
   },
   "Export": {
    "Name": "dev-VpcId"
   }
  },
  "LambdaSecurityGroupId": {
   "Description": "Lambda Security Group ID",
   "Value": {
    "Fn::GetAtt": [
     "LambdaSecurityGroup0BD9FC99",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "dev-LambdaSecurityGroupId"
   }
  },
  "ExportsOutputRefHallucifixVpcDatabaseSubnet1Subnet9217D263F47BBAE6": {
   "Value": {
    "Ref": "HallucifixVpcDatabaseSubnet1Subnet9217D263"
   },
   "Export": {
    "Name": "Hallucifix-Network-dev:ExportsOutputRefHallucifixVpcDatabaseSubnet1Subnet9217D263F47BBAE6"
   }
  },
  "ExportsOutputRefHallucifixVpcDatabaseSubnet2SubnetA29A3901BF6F77C1": {
   "Value": {
    "Ref": "HallucifixVpcDatabaseSubnet2SubnetA29A3901"
   },
   "Export": {
    "Name": "Hallucifix-Network-dev:ExportsOutputRefHallucifixVpcDatabaseSubnet2SubnetA29A3901BF6F77C1"
   }
  },
  "ExportsOutputRefHallucifixVpcDatabaseSubnet3SubnetCF4717AD92F97BAD": {
   "Value": {
    "Ref": "HallucifixVpcDatabaseSubnet3SubnetCF4717AD"
   },
   "Export": {
    "Name": "Hallucifix-Network-dev:ExportsOutputRefHallucifixVpcDatabaseSubnet3SubnetCF4717AD92F97BAD"
   }
  },
  "ExportsOutputFnGetAttDatabaseSecurityGroup7319C0F6GroupId72A1B827": {
   "Value": {
    "Fn::GetAtt": [
     "DatabaseSecurityGroup7319C0F6",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "Hallucifix-Network-dev:ExportsOutputFnGetAttDatabaseSecurityGroup7319C0F6GroupId72A1B827"
   }
  },
  "ExportsOutputRefHallucifixVpcPrivateSubnet1SubnetFFEEFD679FAB8C6A": {
   "Value": {
    "Ref": "HallucifixVpcPrivateSubnet1SubnetFFEEFD67"
   },
   "Export": {
    "Name": "Hallucifix-Network-dev:ExportsOutputRefHallucifixVpcPrivateSubnet1SubnetFFEEFD679FAB8C6A"
   }
  },
  "ExportsOutputRefHallucifixVpcPrivateSubnet2Subnet08A6F5AB6D0C5E11": {
   "Value": {
    "Ref": "HallucifixVpcPrivateSubnet2Subnet08A6F5AB"
   },
   "Export": {
    "Name": "Hallucifix-Network-dev:ExportsOutputRefHallucifixVpcPrivateSubnet2Subnet08A6F5AB6D0C5E11"
   }
  },
  "ExportsOutputRefHallucifixVpcPrivateSubnet3SubnetB14BABA55BABFE9E": {
   "Value": {
    "Ref": "HallucifixVpcPrivateSubnet3SubnetB14BABA5"
   },
   "Export": {
    "Name": "Hallucifix-Network-dev:ExportsOutputRefHallucifixVpcPrivateSubnet3SubnetB14BABA55BABFE9E"
   }
  },
  "ExportsOutputFnGetAttCacheSecurityGroupC6A3ACCFGroupId492AA7D3": {
   "Value": {
    "Fn::GetAtt": [
     "CacheSecurityGroupC6A3ACCF",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "Hallucifix-Network-dev:ExportsOutputFnGetAttCacheSecurityGroupC6A3ACCFGroupId492AA7D3"
   }
  },
  "ExportsOutputFnGetAttLambdaSecurityGroup0BD9FC99GroupId34A98CFB": {
   "Value": {
    "Fn::GetAtt": [
     "LambdaSecurityGroup0BD9FC99",
     "GroupId"
    ]
   },
   "Export": {
    "Name": "Hallucifix-Network-dev:ExportsOutputFnGetAttLambdaSecurityGroup0BD9FC99GroupId34A98CFB"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
